package Class;
import java.util.ArrayList;
import java.util.List;

/**
 * Représente un Nain, créature robuste.
 */
public class Nain extends Creature {
    public Nain(String nomComplet, String sexe, double poids, double taille, int age, int moral) {
        super(nomComplet, sexe, poids, taille, age, moral);
    }
}
