package main;

/**

 Enumération des niveaux de budget possibles pour un service médical.
 */
public enum Budget {
    INEXISTANT, MEDIOCRE, INSUFFISANT, FAIBLE
}
