package main;

/**

 Centre de quarantaine pour créatures contagieuses.
 */
public class CentreDeQuarantaine extends ServiceMedical {
    private boolean isolation;

    @Override
    public void reviserBudget() {}
}
