package main;

import java.util.List;

/**
 * Représente un Homme-bête, créature bestiale pouvant contaminer.
 */
public class HommeBete extends Creature {
    /**
     * Peut contaminer d'autres créatures du service.
     */
    public void contaminer() {
        // TODO: Implémenter la logique de contamination.
    }
}
