package main;

import java.util.List;
import java.util.ArrayList;


/**

 Classe principale représentant l'hôpital fantastique.
 */
public class HopitalFantastique {
    private String nom;
    private int capaciteServices;
    private List<ServiceMedical> services;
    private List<Medecin> medecins;

    /**

     Affiche le nombre total de créatures.
     */
    public void afficherNbCreatures() {}

    /**

     Affiche toutes les créatures de l’hôpital.
     */
    public void afficherToutesCreatures() {}

    /**

     Lance la simulation (gestion du temps, événements aléatoires, passage de main à l'utilisateur).
     */
    public void simuler() {}
}
