package main;

import java.util.List;

/**
 * Représente un Lycanthrope, créature bestiale pouvant contaminer.
 */
public class Lycanthrope extends Creature {
    /**
     * Peut contaminer d'autres créatures.
     */
    public void contaminer() {
        // TODO: Implémenter la logique de contamination.
    }
}