package main;

import java.util.List;

/**
 * Représente un Reptilien, créature sensible à la démoralisation.
 */
public class Reptilien extends Creature {
    /**
     * Peut démoraliser d'autres créatures (si besoin selon l'énoncé).
     */
    public void demoraliser() {
        // TODO: Implémenter la logique de démoralisation si nécessaire.
    }
}