package main;

/**

 Service médical standard.
 */
public class ServiceStandard extends ServiceMedical {
    @Override
    public void reviserBudget() {}
}
