package main;

/**

 Enumération des types de créatures gérés par l'hôpital.
 */
public enum TypeCreature {
    ELFE, NAIN, ORQUE, HOMMEBETE, ZOMBIE, VAMPIRE, LYCANTHROPE, REPTILIEN
}
