package main;

import java.util.List;

/**
 * Représente un Vampire, créature régénérante et démoralisante.
 */
public class Vampire extends Creature {
    /**
     * Peut démoraliser d'autres créatures.
     */
    public void demoraliser() {
        // TODO: Implémenter la logique de démoralisation.
    }

    /**
     * Peut se régénérer.
     */
    public void regenerer() {
        // TODO: Implémenter la logique de régénération.
    }
}
